# c2c

./: CHANGELOG.md  LICENSE  README.md  commitlint.config.js  pyproject.toml
.github/workflows/: release.yml
src/c2c/: __init__.py  c2c.py
tests/: test_c2c.py
