[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "c2c"
version = "1.0.3"
authors = [
    { name="Yoshikazu Kawataki", email="y.kawataki@gmail.com" },
]
description = "Convert directory structure into a single text file while respecting .gitignore rules"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/kawataki-yoshika/c2c"
"Bug Tracker" = "https://github.com/kawataki-yoshika/c2c/issues"

[project.scripts]
c2c = "c2c.c2c:main"

[tool.hatch.build.targets.wheel]
packages = ["src/c2c"]
